@@ -248,7 +248,7 @@ Object BufferedFileBinaryInputPort::position() const
 
 bool BufferedFileBinaryInputPort::setPosition(int position)
 {
-    const int ret = lseek(fd_, position, SEEK_SET);
+    const int ret = lseekFd(fd_, position, SEEK_SET);
     if (position == ret) {
         position_ =  position;
 
