@@ -38,6 +38,7 @@ namespace scheme {
 
     ucs4char** getCommandLine(int argc, char* argv[]);
     int openFd(const ucs4string& file, int flags, int mode);
+    int64_t lseekFd(int fd, int64_t offset, int whence);
     int writeToFd(int fd, uint8_t* buf, size_t size);
     int readFromFd(int fd, uint8_t* buf, size_t size);
     bool fileExistsP(const ucs4string& path);
